# AiProjectTemplate

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  config_schema.py
config/dataset/: base.yaml
config/model/: base.yaml
config/training/: base.yaml
config/utils/: base.yaml
docs/: 추가할거.md
notebooks/: main.ipynb
notebooks/.ipynb_checkpoints/: main-checkpoint.ipynb
outputs/2025-05-31/10-51-03/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-31/10-55-17/.hydra/: hydra.yaml
outputs/2025-05-31/11-43-44/.hydra/: config.yaml  hydra.yaml
scripts/: folder_tree.py  main.py
src/my_template/abc_interfaces/: data_interfaces.py  model_interfaces.py
src/my_template/data/: DataLoader.py  DataPreprorocessor.py  DataProcessor.py  DataVisualizer.py  Dataset.py  __init__.py  data_schema.py
src/my_template/model/: Model.py
src/my_template/training/: ExperimentManager.py  PipeLine.py  TrainVisualizer.py  Trainer.py  Tuner.py  __init__.py
src/my_template/training/CallBacks/: CallBack.py  EarlyStopping.py  __init__.py  lr_scheduler.py
src/my_template/training/losses/: __init__.py  loss_factory.py
src/my_template/training/optimizers/: __init__.py  optimizer_factory.py
src/my_template/utils/: Config.py  ConfigurationManager.py  Logger.py  Saver.py  UtilityManager.py  __init__.py
src/utils/: Logger.py  UtilityManager.py
tests/: conftest.py  run_test.py
tests/integration/: run_integration_test.py
tests/unit/: run_unit_test.py
tests/unit/data/: test_DataLoader.py
tests/unit/utils/: test_UtilityManager.py
